# whatmade

./: CHANGELOG.md  CMakeLists.txt  README.md  configsingleton.cpp  configsingleton.h  main.cpp  os_specific.h  sqlite_specific.h  xattr.cpp  xattr.h
FM_Extensions/MATE-CAJA/: whatmade-extension.py  whomade-extension.py
FM_Extensions/Midnight Commander/: menu
Imp/: Imp.cpp  Imp.h
Log/: logger.cpp  logger.h
systemd/: whatmade.service
